gcc/testsuite/gdc.test/compilable/imports/test19750c.d
import test19750d;
class Qux: Thud {
  override void thunk() {}
}
