gcc/testsuite/gdc.test/fail_compilation/fail3581b.d

class A { void f() {} }
class B : A { private override void f() {}; }

void main() {}
